data/derived/comb/progs/unify/prog6574.ml.out
Characters 49-62:
  |_-> x::clone x (n-1)::[];;
          ^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
